src/ducks/items/ItemCard.scss
.sortable-item {
  width: 100%;
  flex: 1 1 auto;
  border: 1px solid lighten(black, 10%);
  border-radius: 3px;
  margin: 0.25rem;
  text-align: center;
  color: black;
  font-size: small;
  display: flex;
  flex-direction: row;

  .btn-light {
    border-color: grey;
  }

  &.inactive {
    color: black;
    button {
      background-color: var(--bs-danger);
      color: white;
    }
    //border-color: red;
    img {
      filter: grayscale(50%) brightness(80%);
    }
    a {
      color: lighten(black, 50%);
    }

  }

  &--edit-button {
    width: 5rem;
    border-radius: 0;
    margin-bottom: 0 !important;
  }

  &.section {
    background-color: var(--item-section-color);
    font-weight: bold;
  }

  &.product {
    background-color: var(--item-product-color);
  }

  &.category {
    background-color: var(--item-category-color);
  }

  &.link {
    background-color: var(--item-link-color);
  }

  &-padding {
    padding: 0.5rem;
  }

  &-content {
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    .image-container {
      max-height: 80px;
      .img-thumbnail {
        max-height: 100%;
      }
    }
  }
}

